# Gym Management System - Class Diagram (PlantUML)

@startuml GymManagementSystem

' User Management Package
package "Users" {
    class User {
        - userId: int
        - userName: String
        - password: String
        - email: String
        - phone: String
        - address: String
        - role: String
        + User()
        + User(userName, password, email, phone, address, role, userId)
        + getUserId(): int
        + setUserId(userId: int): void
        + getUserName(): String
        + setUserName(userName: String): void
        + getPassword(): String
        + setPassword(password: String): void
        + getEmail(): String
        + setEmail(email: String): void
        + getPhone(): String
        + setPhone(phone: String): void
        + getAddress(): String
        + setAddress(address: String): void
        + getRole(): String
        + setRole(role: String): void
        + toString(): String
    }

    class UserDAO {
        + saveNewUserToDB(user: User): void
        + getUserByUsername(username: String): User
        + getUserById(id: int): User
        + getAllUsers(): ArrayList<User>
        + deleteUserById(id: int): boolean
    }

    class UserService {
        - userDAO: UserDAO
        + saveNewUser(user: User): void
        + getUserByUsername(username: String): User
        + verifyPassword(plainPassword: String, hashedPassword: String): boolean
        + userLogIn(userName: String, password: String): User
        + getUserById(id: int): User
        + getAllUsers(): ArrayList<User>
        + deleteUserById(id: int): boolean
        + isAdmin(user: User): boolean
        + isTrainer(user: User): boolean
        + isMember(user: User): boolean
        + usernameExists(username: String): boolean
        + logout(user: User): void
    }
}

' Roles Package
package "Roles" {
    class Admin {
        + Admin()
        + Admin(userName, password, email, phone, address, role, userId)
        + toString(): String
    }

    class Trainer {
        - trainerId: int
        + Trainer()
        + Trainer(userName, password, email, phone, address, role, userId, trainerId)
        + getTrainerId(): int
        + setTrainerId(trainerId: int): void
        + toString(): String
    }

    class Member {
        + Member()
        + Member(userName, password, email, phone, address, role, userId)
        + toString(): String
    }
}

' Membership Management Package
package "MembershipManagement" {
    class Membership {
        - msId: String
        - msType: String
        - msDesc: String
        - msCost: double
        - userId: User
        + Membership()
        + Membership(msId, msType, msDesc, msCost, userId)
        + getMsId(): String
        + setMsId(msId: String): void
        + getMsType(): String
        + setMsType(msType: String): void
        + getMsDesc(): String
        + setMsDesc(msDesc: String): void
        + getMsCost(): double
        + setMsCost(msCost: double): void
        + getUserId(): User
        + setUserId(userId: User): void
        + toString(): String
    }

    class MembershipDAO {
        + saveNewMembershipToDB(membership: Membership, user: User): void
        + getTotalRevenue(): double
        + getAllMemberships(): void
    }

    class MembershipService {
        - membershipDao: MembershipDAO
        + saveNewMembership(membership: Membership, user: User): void
        + viewTotalRevenue(): void
        + viewMembershipStatistics(): void
    }
}

' Workout Management Package
package "WorkoutManagement" {
    class WorkoutClass {
        - wcId: String
        - wcType: String
        - wcDesc: String
        - trainerId: String
        + WorkoutClass()
        + WorkoutClass(wcId, wcType, wcDesc, trainerId)
        + getWcId(): String
        + setWcId(wcId: String): void
        + getWcType(): String
        + setWcType(wcType: String): void
        + getWcDesc(): String
        + setWcDesc(wcDesc: String): void
        + getTrainerId(): String
        + setTrainerId(trainerId: String): void
        + toString(): String
    }

    class WorkoutClassDAO {
        + saveNewWorkoutClassToDB(workoutclass: WorkoutClass, trainer: Trainer): void
        + printAllWorkoutClasses(workoutClass: WorkoutClass): void
        + updateWorkoutClass(workoutClass: WorkoutClass): void
        + deleteWorkoutClass(wcId: String): void
    }

    class WorkoutClassService {
        - workoutDao: WorkoutClassDAO
        + saveNewWorkoutClass(workoutclass: WorkoutClass, trainer: Trainer): void
        + viewAllWorkoutClasses(): void
        + updateWorkoutClass(workoutClass: WorkoutClass): void
        + deleteWorkoutClass(wcId: String): void
    }
}

' Gym Merchandise Management Package
package "GymMerchandiseManagement" {
    class Merch {
        - name: String
        - merchDesc: String
        - type: String
        - cost: double
        - quantity: int
        + Merch()
        + Merch(name, merchDesc, type, cost, quantity)
        + getName(): String
        + setName(name: String): void
        + getMerchDesc(): String
        + setMerchDesc(merchDesc: String): void
        + getType(): String
        + setType(type: String): void
        + getCost(): double
        + setCost(cost: double): void
        + getQuantity(): int
        + setQuantity(quantity: int): void
        + toString(): String
    }

    class MerchDAO {
        + saveNewMerchItemToDB(merch: Merch): void
        + getAllMerchItems(): void
    }

    class MerchService {
        - merchDAO: MerchDAO
        + addNewMerch(merch: Merch): void
        + printStockReport(): void
        + viewAllProducts(): void
    }
}





' Inheritance relationships
User <|-- Admin
User <|-- Trainer
User <|-- Member

' Association relationships
UserService --> UserDAO
MembershipService --> MembershipDAO
WorkoutClassService --> WorkoutClassDAO
MerchService --> MerchDAO

' Dependencies
Membership --> User : contains
WorkoutClass --> Trainer : assigned to




@enduml